--- a/index.html
+++ b/index.html
@@ -35,6 +35,9 @@ https://templatemo.com/tm-538-digital-trend
     <nav class="navbar navbar-expand-lg">
         <div class="container">
             <a class="navbar-brand" href="index.html">
+               <i class="logo">
+                    <img src="images/kasirinlogo.png" alt="" class="logokasirin">
+               </i>
               <!-- <i class="fa fa-line-chart" ></i>  -->
               Kasirin Salon
             </a>
@@ -46,24 +49,27 @@ https://templatemo.com/tm-538-digital-trend
 
             <div class="collapse navbar-collapse" id="navbarNav">
                 <ul class="navbar-nav ml-auto">
-                    <!-- <li class="nav-item">
-                        <a href="#about" class="nav-link smoothScroll">Studio</a>
+                    <li class="nav-item">
+                         <a href="#" class="nav-link smoothScroll">Home</a>
                     </li>
                     <li class="nav-item">
-                        <a href="#project" class="nav-link smoothScroll">Our Works</a>
+                        <a href="#about" class="nav-link smoothScroll">About</a>
+                    </li>
+                    <li class="nav-item">
+                        <a href="#project" class="nav-link smoothScroll">Features</a>
                     </li>
                     <li class="nav-item">
                         <a href="blog.html" class="nav-link">Blog</a>
                     </li>
                     <li class="nav-item">
                         <a href="contact.html" class="nav-link contact">Contact</a>
-                    </li> -->
+                    </li>
 
                     <!-- kasirin -->
                     <!-- <li class="nav-item">
                          <a href="" class="tambahtransaksi">Tambah Transaksi</a>
                     </li> -->
-                    <li class="nav-item">
+                    <!-- <li class="nav-item">
                          <a href="" class="beranda">Beranda</a>
                     </li>
                     <li class="nav-item">
@@ -80,7 +86,7 @@ https://templatemo.com/tm-538-digital-trend
                     </li>
                     <li class="nav-item">
                          <a href="" class="pelanggan">Pelanggan</a>
-                    </li>
+                    </li> -->
                     <!-- <li class="nav-item">
                          <a href="" class="tentangkami">Tentang Kami</a>
                     </li>
@@ -99,14 +105,24 @@ https://templatemo.com/tm-538-digital-trend
                <div class="container">
                     <div class="row">
 
-                        <div class="col-lg-6 col-md-10 col-12 d-flex flex-column justify-content-center align-items-center">
+                         <!-- <div class="background">
                               <div class="hero-text">
 
-                                   <h1 class="text-white" data-aos="fade-up">We are ready for your digital marketing</h1>
+                                   <h1 class="text-white" data-aos="fade-up">Manage cashiers easier with Kasirin Salon</h1>
                                    
                                    <a href="contact.html" class="custom-btn btn-bg btn mt-3" data-aos="fade-up" data-aos-delay="100">Let us discuss together!</a>
 
-                                   <strong class="d-block py-3 pl-5 text-white" data-aos="fade-up" data-aos-delay="200"><i class="fa fa-phone mr-2"></i> +99 080 070 4224</strong>
+                                   <strong class="d-block py-3 pl-5 text-white" data-aos="fade-up" data-aos-delay="200"><i class="fa fa-phone mr-2"></i> 0822-2332-6818</strong>
+                              </div>
+                         </div> -->
+                        <div class="col-lg-6 col-md-10 col-12 d-flex flex-column justify-content-center align-items-center">
+                              <div class="hero-text">
+
+                                   <h1 class="text-white" data-aos="fade-up">Manage cashiers easier with Kasirin Salon</h1>
+                                   
+                                   <a href="contact.html" class="custom-btn btn-bg btn mt-3" data-aos="fade-up" data-aos-delay="100">Let us discuss together!</a>
+
+                                   <strong class="d-block py-3 pl-5 text-white" data-aos="fade-up" data-aos-delay="200"><i class="fa fa-phone mr-2"></i> 0822-2332-6818</strong>
                               </div>
                         </div>
 
@@ -130,15 +146,16 @@ https://templatemo.com/tm-538-digital-trend
                     <div class="col-lg-7 mx-auto col-md-10 col-12">
                          <div class="about-info">
 
-                              <h2 class="mb-4" data-aos="fade-up">the best <strong>Digital Marketing agency</strong> in Rio de Janeiro</h2>
+                              <h2 class="mb-4" data-aos="fade-up">The best <strong>Software House</strong> in Semarang</h2>
 
-                              <p class="mb-0" data-aos="fade-up">Total 5 HTML pages are included in this template from TemplateMo website. Please check 2 <a href="blog.html">blog</a> pages, <a href="project-detail.html">project</a> page, and <a href="contact.html">contact</a> page. 
-                              <br><br>You are <strong>allowed</strong> to use this template for commercial or non-commercial purpose. You are NOT allowed to redistribute the template ZIP file on template collection websites.</p>
+                              <p>CAN Creative adalah sebuah perusahaan yang bergerak dibidang jasa pembuatan produk-produk multimedia yang menunjang produktifitas bisnis anda. Kami menawarkan <strong> jasa pembuatan dan pengembangan Website Company Profile, Web Sistem Informasi, E-Commerce, Jasa Pembuatan Aplikasi Mobile Android dan IOS, Game, Aplikasi Desktop, dan lain sebagainya. </strong></p>
+                              <!-- <p class="mb-0" data-aos="fade-up">Total 5 HTML pages are included in this template from TemplateMo website. Please check 2 <a href="blog.html">blog</a> pages, <a href="project-detail.html">project</a> page, and <a href="contact.html">contact</a> page. 
+                              <br><br>You are <strong>allowed</strong> to use this template for commercial or non-commercial purpose. You are NOT allowed to redistribute the template ZIP file on template collection websites.</p> -->
                          </div>
 
                          <div class="about-image" data-aos="fade-up" data-aos-delay="200">
 
-                          <img src="images/office.png" class="img-fluid" alt="office">
+                          <img src="images/sejarahcancreative.png" class="img-fluid" alt="office">
                         </div>
                     </div>
 
@@ -155,20 +172,20 @@ https://templatemo.com/tm-538-digital-trend
                     <div class="col-lg-12 col-12">
 
                         <h2 class="mb-5 text-center" data-aos="fade-up">
-                            Please take a look through our
-                            <strong>featured Digital Trends</strong>
+                            <!-- Please take a look through our -->
+                            <strong>Our Services</strong>
                         </h2>
 
                          <div class="owl-carousel owl-theme" id="project-slide">
                               <div class="item project-wrapper" data-aos="fade-up" data-aos-delay="100">
-                                   <img src="images/project/project-image01.jpg" class="img-fluid" alt="project image">
+                                   <img src="images/product.jpg" class="img-fluid" alt="project image">
 
                                    <div class="project-info">
-                                        <small>Marketing</small>
+                                        <!-- <small>Marketing</small> -->
 
                                         <h3>
                                              <a href="project-detail.html">
-                                                  <span>Sweet Go Agency</span>
+                                                  <span>Product</span>
                                                   <i class="fa fa-angle-right project-icon"></i>
                                              </a>
                                         </h3>
@@ -176,14 +193,14 @@ https://templatemo.com/tm-538-digital-trend
                               </div>
 
                               <div class="item project-wrapper" data-aos="fade-up">
-                                   <img src="images/project/project-image02.jpg" class="img-fluid" alt="project image">
+                                   <img src="images/category.jpg" class="img-fluid" alt="project image">
 
                                    <div class="project-info">
-                                        <small>Website</small>
+                                        <!-- <small>Website</small> -->
 
                                         <h3>
                                              <a href="project-detail.html">
-                                                  <span>Smart Ladies</span>
+                                                  <span>Category</span>
                                                   <i class="fa fa-angle-right project-icon"></i>
                                              </a>
                                         </h3>
@@ -191,14 +208,14 @@ https://templatemo.com/tm-538-digital-trend
                               </div>
 
                               <div class="item project-wrapper" data-aos="fade-up">
-                                   <img src="images/project/project-image03.jpg" class="img-fluid" alt="project image">
+                                   <img src="images/transaction.jpg" class="img-fluid" alt="project image">
 
                                    <div class="project-info">
-                                        <small>Branding</small>
+                                        <!-- <small>Branding</small> -->
 
                                         <h3>
                                              <a href="project-detail.html">
-                                                  <span>Shoes factory</span>
+                                                  <span>Transaction</span>
                                                   <i class="fa fa-angle-right project-icon"></i>
                                              </a>
                                         </h3>
@@ -206,14 +223,14 @@ https://templatemo.com/tm-538-digital-trend
                               </div>
 
                               <div class="item project-wrapper" data-aos="fade-up">
-                                   <img src="images/project/project-image04.jpg" class="img-fluid" alt="project image">
+                                   <img src="images/membership.jpg" class="img-fluid" alt="project image">
 
                                    <div class="project-info">
-                                        <small>Social Media</small>
+                                        <!-- <small>Social Media</small> -->
 
                                         <h3>
                                              <a href="project-detail.html">
-                                                  <span>Race Bicycle</span>
+                                                  <span>Membership</span>
                                                   <i class="fa fa-angle-right project-icon"></i>
                                              </a>
                                         </h3>
@@ -221,14 +238,14 @@ https://templatemo.com/tm-538-digital-trend
                               </div>
 
                               <div class="item project-wrapper" data-aos="fade-up">
-                                   <img src="images/project/project-image05.jpg" class="img-fluid" alt="project image">
+                                   <img src="images/customer2.jpg" class="img-fluid" alt="project image">
 
                                    <div class="project-info">
-                                        <small>Video</small>
+                                        <!-- <small>Video</small> -->
 
                                         <h3>
                                              <a href="project-detail.html">
-                                                  <span>Ultimate HealthCare</span>
+                                                  <span>Customer</span>
                                                   <i class="fa fa-angle-right project-icon"></i>
                                              </a>
                                         </h3>
