--- a/index.html
+++ b/index.html
@@ -58,9 +58,9 @@ https://templatemo.com/tm-538-digital-trend
                     <li class="nav-item">
                         <a href="#project" class="nav-link smoothScroll">Features</a>
                     </li>
-                    <li class="nav-item">
+                    <!-- <li class="nav-item">
                         <a href="blog.html" class="nav-link">Blog</a>
-                    </li>
+                    </li> -->
                     <li class="nav-item">
                         <a href="contact.html" class="nav-link contact">Contact</a>
                     </li>
@@ -178,7 +178,7 @@ https://templatemo.com/tm-538-digital-trend
 
                          <div class="owl-carousel owl-theme" id="project-slide">
                               <div class="item project-wrapper" data-aos="fade-up" data-aos-delay="100">
-                                   <img src="images/product.jpg" class="img-fluid" alt="project image">
+                                   <img src="images/produk.png" class="img-fluid" alt="project image">
 
                                    <div class="project-info">
                                         <!-- <small>Marketing</small> -->
@@ -192,11 +192,11 @@ https://templatemo.com/tm-538-digital-trend
                                    </div>
                               </div>
 
-                              <div class="item project-wrapper" data-aos="fade-up">
-                                   <img src="images/category.jpg" class="img-fluid" alt="project image">
+                              <!-- <div class="item project-wrapper" data-aos="fade-up">
+                                   <img src="images/category2.jpg" class="img-fluid" alt="project image">
 
                                    <div class="project-info">
-                                        <!-- <small>Website</small> -->
+                                        <small>Website</small>
 
                                         <h3>
                                              <a href="project-detail.html">
@@ -205,10 +205,10 @@ https://templatemo.com/tm-538-digital-trend
                                              </a>
                                         </h3>
                                    </div>
-                              </div>
+                              </div> -->
 
                               <div class="item project-wrapper" data-aos="fade-up">
-                                   <img src="images/transaction.jpg" class="img-fluid" alt="project image">
+                                   <img src="images/transaksi2.png" class="img-fluid" alt="project image">
 
                                    <div class="project-info">
                                         <!-- <small>Branding</small> -->
@@ -223,7 +223,7 @@ https://templatemo.com/tm-538-digital-trend
                               </div>
 
                               <div class="item project-wrapper" data-aos="fade-up">
-                                   <img src="images/membership.jpg" class="img-fluid" alt="project image">
+                                   <img src="images/membership2.png" class="img-fluid" alt="project image">
 
                                    <div class="project-info">
                                         <!-- <small>Social Media</small> -->
@@ -238,7 +238,7 @@ https://templatemo.com/tm-538-digital-trend
                               </div>
 
                               <div class="item project-wrapper" data-aos="fade-up">
-                                   <img src="images/customer2.jpg" class="img-fluid" alt="project image">
+                                   <img src="images/customer.png" class="img-fluid" alt="project image">
 
                                    <div class="project-info">
                                         <!-- <small>Video</small> -->
@@ -272,11 +272,15 @@ https://templatemo.com/tm-538-digital-trend
                     </div>
 
                     <div class="col-lg-6 col-md-7 col-12">
-                      <h4 class="my-5 pt-3" data-aos="fade-up" data-aos-delay="100">Client Testimonials</h4>
+                         <h2 class="testimonial" data-aos="fade-up" data-aos-delay="100">Client Testimonials</h2>
+                      <!-- <h4 class="my-5 pt-3" data-aos="fade-up" data-aos-delay="100">Client Testimonials</h4> -->
 
                       <div class="quote" data-aos="fade-up" data-aos-delay="200"></div>
 
-                      <h2 class="mb-4" data-aos="fade-up" data-aos-delay="300">Lorem ipsum Sed eiusmod esse aliqua sed incididunt aliqua incididunt mollit id et sit proident dolor nulla sed commodo.</h2>
+                      <p class="testimonial" data-aos="fade-up" data-aos-delay="300">
+                           Lorem ipsum dolor sit amet consectetur adipisicing elit. Quibusdam magnam fuga modi ullam delectus, velit quidem dolor illo porro eum magni facere quis recusandae assumenda non autem consequuntur at ratione, dignissimos ipsa ad alias. Ab eligendi culpa qui velit architecto mollitia eos, sint sequi minus illo quasi quam reiciendis quod praesentium corrupti exercitationem laboriosam porro quis quia magnam harum dolor dolorem minima ipsam! Quod aut tempora veritatis fugiat a eum perferendis ipsum tenetur asperiores architecto rerum maiores facilis rem, provident numquam neque at nesciunt eligendi cumque aliquid! Accusantium at eos, aliquam velit accusamus rem ipsa voluptate dolores autem nihil saepe.
+                      </p>
+                      <!-- <h2 class="mb-4" data-aos="fade-up" data-aos-delay="300">Lorem ipsum Sed eiusmod esse aliqua sed incididunt aliqua incididunt mollit id et sit proident dolor nulla sed commodo.</h2> -->
 
                       <p data-aos="fade-up" data-aos-delay="400">
                         <strong>Mary Zoe</strong>
@@ -305,13 +309,13 @@ https://templatemo.com/tm-538-digital-trend
 
             <p class="mb-1">
               <i class="fa fa-phone mr-2 footer-icon"></i> 
-              +99 080 070 4224
+              0822-2332-6818
             </p>
 
             <p>
               <a href="#">
                 <i class="fa fa-envelope mr-2 footer-icon"></i>
-                hello@company.com
+                hallo@can.co.id
               </a>
             </p>
           </div>
@@ -321,14 +325,14 @@ https://templatemo.com/tm-538-digital-trend
 
             <p class="mb-1">
               <i class="fa fa-home mr-2 footer-icon"></i> 
-              Av. Lúcio Costa - Barra da Tijuca, Rio de Janeiro - RJ, Brazil
+              Jl. Sentyaki Raya No.7 Bulu Lor, Semarang, Indonesia 50179
             </p>
           </div>
 
           <div class="col-lg-4 mx-lg-auto text-center col-md-8 col-12" data-aos="fade-up" data-aos-delay="400">
-            <p class="copyright-text">Copyright &copy; 2020 Your Company
-            <br>
-            <a rel="nofollow noopener" href="https://templatemo.com">Design: TemplateMo</a></p>
+            <p class="copyright-text">Copyright &copy; 2020 
+            <!-- <br>
+            <a rel="nofollow noopener" href="https://templatemo.com">Design: TemplateMo</a></p> -->
           </div>
 
           <div class="col-lg-4 mx-lg-auto col-md-6 col-12" data-aos="fade-up" data-aos-delay="500">
