--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@ https://templatemo.com/tm-538-digital-trend
                     <img src="images/kasirinlogo.png" alt="" class="logokasirin">
                </i>
               <!-- <i class="fa fa-line-chart" ></i>  -->
-              Kasirin Salon
+              
             </a>
 
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false"
@@ -121,7 +121,7 @@ https://templatemo.com/tm-538-digital-trend
                         <div class="col-lg-6 col-md-10 col-12 d-flex flex-column justify-content-center align-items-center">
                               <div class="hero-text">
 
-                                   <h1 class="text-white" data-aos="fade-up">Manage cashiers easier with Kasirin Salon</h1>
+                                   <h1 class="text-white" data-aos="fade-up">Manage Cashiers Easier With <strong>KASIRIN SALON</strong></h1>
                                    
                                    <a href="https://play.google.com/store/apps/details?id=com.cancreative.salonkasir" class="custom-btn btn-bg btn mt-3" data-aos="fade-up" data-aos-delay="100" target="_blank">Get Application</a>
 
