--- a/index.html
+++ b/index.html
@@ -121,7 +121,8 @@ https://templatemo.com/tm-538-digital-trend
                         <div class="col-lg-6 col-md-10 col-12 d-flex flex-column justify-content-center align-items-center">
                               <div class="hero-text">
 
-                                   <h2 class="text-white" data-aos="fade-up">Mengelola keuangan lebih mudah</h2><h1><strong>KASIRIN SALON</strong></h1>
+                                   <h1><strong>KASIRIN SALON</strong></h1>
+                                   <h2 class="text-white" data-aos="fade-up">Mengelola keuangan lebih mudah</h2>
                                    <a href="https://play.google.com/store/apps/details?id=com.cancreative.salonkasir" class="custom-btn btn-bg btn mt-3" data-aos="fade-up" data-aos-delay="100" target="_blank">
                                         <img src="images/playstore3.png" alt="">
                                         DAPATKAN APLIKASI
